<resources>
    <string name="app_name">TiketSaya</string>
    <string name="splash_desc">Wisata Jadi Lebih Asyik</string>
    <string name="main_desc">Discover \nThe Beauty \nOf Earth</string>
    <string name="sign_in">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_akun">Create New Account</string>
    <string name="registerone_desc">Please fill up the forms below \nfor informations</string>
    <string name="email">Email Address</string>
    <string name="email_hint">admin@gmail.com</string>
    <string name="btn_continue">Continue</string>
    <string name="nama">Nama</string>
    <string name="bio">Bio</string>
    <string name="selfie_time">Selfie Time</string>
    <string name="selfie_time_desc">Let the world knows yourself \nmore better and ever</string>
    <string name="explore">Explore Now</string>
    <string name="message_success_signup">Kamu Hebat</string>
    <string name="message_success_desc">Selamat datang pada TiketSaya \ndan nikmati wisatamu</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="main_menus">Main Menus</string>
    <string name="tv_desc_dashboard">Explore the beauty of world</string>
    <string name="pisa">Pisa</string>
    <string name="pagoda">Pagoda</string>
    <string name="torri">Torri</string>
    <string name="sphinx">Sphinx</string>
    <string name="candi">Candi</string>
    <string name="monas">Monas</string>
    <string name="ticket_tips">Ticket Tips</string>
    <string name="tv_desc_ticket">Learn it for many benefits</string>
    <string name="information_desc">Knowing before travel</string>
    <string name="detail_desc">The leaning of the Tower of Pisa \ncomes into the story in 1173, when \nconstruction began.</string>
    <string name="ticket_detail_desc_2">Anak yang berumur lebih dari 3 tahun wajib membeli tiket untuk masuk kedalam landmark</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="ticket_details_desc">Check the amount of tickets</string>
    <string name="pay_now">Pay Now</string>
    <string name="success_ticket_desc">Anda berhasil membeli tiket \ndan selamat berlibur</string>
    <string name="success_ticket">Selamat Menikmati</string>
    <string name="view_tickets">View Tickets</string>
    <string name="my_ticket">My Ticket</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="refund_now">Refund Now</string>
    <string name="save_profile">Save Profile</string>
    <string name="pricing">Pricing</string>
    <string name="balance_text">Your current balance is</string>
    <string name="price_text">Total Price</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="information">Information</string>
</resources>