<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_addphoto"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/btnpls"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:background="@drawable/bg_gradient_primary_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/mregular"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <TextView
            android:id="@+id/tv_desc_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/mlight"
            android:lineSpacingExtra="9dp"
            android:text="We highly suggest you to \nuse the correct informations"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_ticket" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="700dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_btn_white_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_register"
            app:srcCompat="@drawable/bg_btn_white_primary" />

        <EditText
            android:id="@+id/edt_bio"
            style="@style/edit_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mlight"
            android:text="@string/bio"
            android:textColor="@color/greyPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/edt_nama" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mlight"
            android:text="@string/nama"
            android:textColor="@color/greyPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <EditText
            android:id="@+id/edt_nama"
            style="@style/edit_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mlight"
            android:text="@string/username"
            android:textColor="@color/greyPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/edt_bio" />

        <EditText
            android:id="@+id/edt_username"
            style="@style/edit_text"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/edit_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="RtlSymmetry"
            tools:text="@string/password" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mlight"
            android:text="@string/password"
            android:textColor="@color/greyPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/edt_username" />

        <EditText
            android:id="@+id/edt_email"
            style="@style/edit_text"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView99"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView99"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mlight"
            android:text="@string/email"
            android:textColor="@color/greyPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <com.github.florent37.shapeofview.shapes.CircleView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3">

            <ImageView
                android:id="@+id/photo_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/icon_nopic" />

        </com.github.florent37.shapeofview.shapes.CircleView>

        <View
            android:id="@+id/view3"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_view_circle_pic"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/btn_back"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <Button
            android:id="@+id/btn_save"
            style="@style/margin_btn_blue_primary"
            android:text="@string/save_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="@+id/btn_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>